# Online-Cinema-Web-App

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose-notifications.yaml  compose-ugc.yaml  compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: main_workflow.yaml
admin/: .env.example  uwsgi.ini
admin/movies/: apps.py  models.py
async_api/: compose-dev.yaml  compose.yaml
async_api/admin/: Dockerfile  requirements.txt  uwsgi.ini
async_api/auth_service/: .env.example  Dockerfile  auth-compose-dev.yaml  auth-compose-test.yaml  auth-compose.yaml  docker-compose-test.yaml  docker-compose.yaml  entrypoint.sh  requirements.txt
async_api/etl/: Dockerfile  backoff.py  es_loaders.py  main.py  pg_extractors.py  requirements.txt  setup.py  transformers.py
async_api/fastapi_api/: requirements.txt
auth-service/: README.md  admin_init.py  alembic.ini  jwt_auth_helpers.py  main.py  requirements.txt
auth_service/: .env.example
etl/: .env.example  es_loaders.py  main.py  pg_extractors.py  requirements.txt  sql_queries.py
etl_kafka_to_ch/: .env.example  Dockerfile  clickhouse.py  extractors.py  loaders.py  logger.py  main.py  models.py  pyrightconfig.json  requirements.txt
etl_kafka_to_mongo/: .env.example  Dockerfile  main.py  requirements.txt  ruff.toml
nginx/: nginx.conf
notifications_api/: Dockerfile  main.py
notifications_service/: Dockerfile  main.py
notifications_worker/: Dockerfile  worker.py
payment_service/: requirements.txt
payments_service/: Dockerfile  requirements.txt
ugc-service/: .env.example  Dockerfile  jwt_auth_helpers.py  main.py  pyrightconfig.json  requirements.txt
ugc_service/: .env.example  main.py  requirements.txt
(+540 files in other folders)
