[tool.poetry]
name = "notifications"
version = "1.0.0"
description = ""
authors = [
    "Носов Сергей <SONosov@datafort.ru>",
    "Бубнова Яна <bujhvh@mail.ru>",
    "Ротанин Дмитрий <rotanin@gmail.com>",
]
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "~3.11.9"
fastapi = "^0.112.1"
gunicorn = "^23.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"
requests = "^2.32.3"
backoff = "^2.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.19.2"}
starlette-context = "^0.3.6"
asyncpg = "^0.29.0"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
apscheduler = "^3.10.4"
sqlalchemy = "^2.0.36"
aiohttp = "^3.11.8"
jinja2 = "^3.1.4"
faststream = {extras = ["kafka"], version = "^0.5.31"}
kafka-python = "^2.0.2"
redis = "^5.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
pytest-randomly = "^3.15.0"
pytest-icdiff = "^0.9"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
bandit = "^1.7.9"
mypy = "^1.11.1"


[tool.poetry.group.admin_panel.dependencies]
django = "^5.1.3"
django-environ = "^0.11.2"
django-ckeditor = "^6.7.1"
python-dotenv = "^1.0.1"


[tool.isort]
profile = 'black'


[tool.black]
line-length = 120
skip-string-normalization = true


[tool.flake8]
exclude = [".git", "__pycache__", ".venv"]
max-line-length = 120


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = [
    "pydantic.mypy"
]
